[gd_scene load_steps=5 format=3 uid="uid://bf85qk4ofe0a2"]

[ext_resource type="Script" path="res://IceBlock/IceBlock.gd" id="1_fc0vm"]
[ext_resource type="Material" uid="uid://dxdag5a6mcmxa" path="res://Assets/Materials/IceMaterial.tres" id="2_n5ohl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_s43u4"]
top_radius = 1.5
bottom_radius = 1.5
height = 0.05

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h5kqn"]
height = 0.05
radius = 1.5

[node name="IceBlock" type="Area3D"]
top_level = true
script = ExtResource("1_fc0vm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.025, 0)
material_override = ExtResource("2_n5ohl")
mesh = SubResource("CylinderMesh_s43u4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.025, 0)
shape = SubResource("CylinderShape3D_h5kqn")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
